--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body{
     background-color: #12f2af;
     height: 3px;
     width: 65px;
-    top: 168px;
+    top: 205px;
     padding: 0px;
 }
 
@@ -48,6 +48,8 @@ body{
 
 .task-done{
     text-decoration: line-through;
+    background-color: lightgray;
+    transition: 0.5s;
 }
 
 .big-title{
@@ -74,4 +76,13 @@ body{
 #add-bttn{
     width: 30px;
     height: 30px;
+}
+
+@media screen and (max-width: 768px) {
+    #under-line{
+        height: 3px;
+        width: 60px;
+        top: 215px;
+    }
+    
 }
