--- a/style.css
+++ b/style.css
@@ -42,10 +42,11 @@ body{
 #under-line{
     position: absolute;
     background-color: #12f2af;
+    width: 0;
+    left: 0;
+    padding: 0;
     height: 3px;
-    width: 65px;
-    top: 205px;
-    padding: 0px;
+    transition: 0.5s;
 }
 
 .task{
@@ -105,8 +106,8 @@ body{
 @media screen and (max-width: 768px) {
     #under-line{
         height: 3px;
-        width: 60px;
-        top: 215px;
+        transition: 0.5s;
+        padding: 0;
     }
 
     .input-area{
